added the first style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple Websites</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div>
+        <h3>My First Websites</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ratione in. Beatae fugiat inventore, doloremque odio tenetur similique perferendis suscipit, quibusdam officiis hic quis quidem, rerum ipsa debitis maxime! Minima quisquam ducimus cupiditate molestiae, suscipit error tempora illum voluptate fugiat, neque ad qui beatae repudiandae tenetur reiciendis culpa pariatur mollitia?</p>
+    </div>
     
 </body>
 </html>
