--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
 </head>
 <body>
     <div>
-        <h3>My First Websites</h3>
+        <h3>My First blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ratione in. Beatae fugiat inventore, doloremque odio tenetur similique perferendis suscipit, quibusdam officiis hic quis quidem, rerum ipsa debitis maxime! Minima quisquam ducimus cupiditate molestiae, suscipit error tempora illum voluptate fugiat, neque ad qui beatae repudiandae tenetur reiciendis culpa pariatur mollitia?</p>
     </div>
+    <div>
+        <h3>My Second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni soluta aperiam tenetur deleniti consequuntur unde consequatur temporibus natus animi sit maxime, esse illum accusantium accusamus similique! Sunt, dolores nostrum atque sequi a laboriosam molestias voluptates porro obcaecati nam assumenda suscipit ratione delectus sit fuga saepe? Quia vero minus quos?</p>
+    </div>
+    <div>
+        <h3>My thire blog</h3>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptas numquam voluptates ea commodi maiores odit blanditiis, veniam quos ad asperiores ipsam! Enim soluta quia tempora culpa beatae iure quisquam alias architecto rem veniam corporis, rerum modi, minus voluptatum nostrum maxime. Voluptatum, quas nesciunt libero illum unde cum at odio?</p>    </div>
     
 </body>
 </html>
