added a list to push code

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni soluta aperiam tenetur deleniti consequuntur unde consequatur temporibus natus animi sit maxime, esse illum accusantium accusamus similique! Sunt, dolores nostrum atque sequi a laboriosam molestias voluptates porro obcaecati nam assumenda suscipit ratione delectus sit fuga saepe? Quia vero minus quos?</p>
     </div>
     <div>
-        <h3>My thire blog</h3>
+        <h3>My third blog</h3>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptas numquam voluptates ea commodi maiores odit blanditiis, veniam quos ad asperiores ipsam! Enim soluta quia tempora culpa beatae iure quisquam alias architecto rem veniam corporis, rerum modi, minus voluptatum nostrum maxime. Voluptatum, quas nesciunt libero illum unde cum at odio?</p>    </div>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptas numquam voluptates ea commodi maiores odit blanditiis, veniam quos ad asperiores ipsam! Enim soluta quia tempora culpa beatae iure quisquam alias architecto rem veniam corporis, rerum modi, minus voluptatum nostrum maxime. Voluptatum, quas nesciunt libero illum unde cum at odio?</p>  </div>
+<div>
+    <h3>You to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message"</li>
+        <li>git push</li>
+    </ul>
+</div>
     
 </body>
 </html>
