added to priash images

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <li>git push</li>
     </ul>
 </div>
+<div>
+    <h3>priash images </h3>
+    <img src="images/priash.png" alt="">
+</div>
     
 </body>
 </html>
